--- a/style.css
+++ b/style.css
@@ -1,17 +1,52 @@
+body{
+  margin: 0;
+  padding: 0;
+}
+
+
+
+
 .header{
   display: flex;
  justify-content: space-around;
+ padding-bottom: 125px;
+ background-color: #1F2937;
+ font-size: 24px;
+ 
 }
+
+h2{
+  color:#F9FaF8;
+  font-family: "Hero";
+  font-size: 24px;
+}
+
+h1{
+  color:#F9FaF8;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 48px;
+}
+p{
+  color:#F9FaF8;
+  font-size: 18px;
+}
+
 
 ul{
   display: flex;
   gap:16px;
   list-style: none;
+  color:#F9FaF8;
+  font-size: 18px;
 }
 
 .content{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  padding-left: 175px;
+  padding-right: 175px;
+  background-color: #1F2937;
+  padding-bottom: 100px;
 }
 
 .sign-up{
@@ -20,6 +55,6 @@ ul{
 }
 
 img{
-  width: 400px;
-  height: 200px
+  width: 800px;
+  height: 250px
 }
