--- a/style.css
+++ b/style.css
@@ -9,26 +9,34 @@ body{
 .header{
   display: flex;
  justify-content: space-around;
- padding-bottom: 125px;
+ padding-bottom: 100px;
  background-color: #1F2937;
  font-size: 24px;
- 
+ font-family: Arial, sans-serif;
 }
 
 h2{
   color:#F9FaF8;
-  font-family: "Hero";
+  font-family: Arial, sans-serif;
   font-size: 24px;
 }
 
 h1{
   color:#F9FaF8;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 48px;
+  padding-right: 100px;
+  margin-top: 0px;
+  padding-bottom: 0px;
 }
 p{
   color:#F9FaF8;
   font-size: 18px;
+  font-family: Arial, sans-serif;
+  padding-right: 100px;
+  padding-right: 100px;
+  justify-content: center;
+  margin-top: -25px;
 }
 
 
@@ -43,8 +51,8 @@ ul{
 .content{
   display: flex;
   justify-content: space-evenly;
-  padding-left: 175px;
-  padding-right: 175px;
+  padding-left: 210px;
+  padding-right: 100px;
   background-color: #1F2937;
   padding-bottom: 100px;
 }
@@ -52,9 +60,36 @@ ul{
 .sign-up{
   display: flex;
   flex-direction: column;
+  padding-right: 0px;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.blue-button{
+  display: flex;
+  flex-direction: column;
 }
 
 img{
   width: 800px;
-  height: 250px
+  height: 250px;
+  padding-right: 100px;
+  padding-left: 0px;
+  text-decoration: none;
+  margin-left: -100px;
+}
+
+button{
+ color: #F9FaF8;
+ background-color: #3882f6;
+ padding: 8px 32px;
+ display: flex;
+ font-size: 16px;
+ border-radius: 5px;
+ font-weight: bold;
+}
+
+a{
+  text-decoration: none;
+  color:#F9FaF8;
 }
