--- a/style.css
+++ b/style.css
@@ -3,9 +3,6 @@ body{
   padding: 0;
 }
 
-
-
-
 .header{
   display: flex;
  justify-content: space-around;
@@ -21,7 +18,7 @@ h2{
   font-size: 24px;
 }
 
-h1{
+.main{
   color:#F9FaF8;
   font-family: Arial, sans-serif;
   font-size: 48px;
@@ -70,12 +67,11 @@ ul{
   flex-direction: column;
 }
 
-img{
+.content img{
   width: 800px;
   height: 250px;
   padding-right: 100px;
   padding-left: 0px;
-  text-decoration: none;
   margin-left: -100px;
 }
 
@@ -92,4 +88,8 @@ button{
 a{
   text-decoration: none;
   color:#F9FaF8;
+}
+
+.rand-info{
+  display: block;
 }
